tests/baselines/reference/derivedClassSuperCallsInNonConstructorMembers.errors.txt
==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsInNonConstructorMembers.ts (14 errors) ====
    // error to use super calls outside a constructor
    
    class Base {
        x: string;
    }
    
    class Derived extends Base {
        a: super();
           ~~~~~
!!! error TS1110: Type expected.
           ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        b() {
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        }
        get C() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
            return 1;
        }
        set C(v) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        }
    
        static a: super();
                  ~~~~~
!!! error TS1110: Type expected.
                  ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        static b() {
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        }
        static get C() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
            return 1;
        }
        static set C(v) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super();
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
        }
    }